enable_testing()
add_executable(test_isotp   test_isotp.cpp)
add_executable(test_session test_session.cpp)
add_executable(test_timing  test_timing.cpp)
target_link_libraries(test_isotp   PRIVATE pulse-ecu)
target_link_libraries(test_session PRIVATE pulse-ecu)
target_link_libraries(test_timing  PRIVATE pulse-ecu)
add_test(NAME isotp   COMMAND test_isotp)
add_test(NAME session COMMAND test_session)
add_test(NAME timing  COMMAND test_timing)
